Updated experience tile

--- a/index.html
+++ b/index.html
@@ -612,24 +612,19 @@
                                 <p id="date-range">March 2022 - Present</p>
                                 <div>
                                     <p id="experience-description">
-                                        At WooliesX, I developed intelligent
-                                        systems to enhance data-driven
-                                        decision-making and user experiences.
-                                        This includes engineering recommendation
-                                        systems with vector databases like
-                                        Weaviate, creating an agentic AI chatbot
-                                        for customer support, and developing
-                                        real-time behavioral targeting and offer
-                                        allocation models to boost engagement
-                                        and sales. I also led the creation of
-                                        Modelverse, an end-to-end MLOps platform
-                                        integrating MLflow, enabling scalable,
-                                        high-density model serving. By
-                                        implementing automated pipelines and
-                                        scalable deployments with tools like
-                                        PyTorch, Kubernetes, and Docker, I
-                                        reduced time-to-market while ensuring
-                                        robust and reliable production systems.
+                                        Led the development of scalable ML
+                                        systems, including a graph-based
+                                        in-session recommendation engine using
+                                        GNNs and Neo4j, optimizing real-time
+                                        serving with Kubernetes and Redis.
+                                        Designed a high-throughput ML inference
+                                        platform with gRPC microservices and
+                                        MLflow, enabling seamless A/B testing
+                                        and zero-downtime rollouts. Developed an
+                                        AI-powered customer support assistant
+                                        with LangGraph and vector databases,
+                                        improving issue resolution and customer
+                                        satisfaction.
                                     </p>
                                 </div>
                             </div>
@@ -650,19 +645,17 @@
                                 <p id="date-range">Oct 2021 - Mar 2022</p>
                                 <div>
                                     <p id="experience-description">
-                                        Developed scalable recommendation
-                                        algorithms using collaborative
-                                        filtering, content-based models, and
-                                        deep learning, improving customer
-                                        satisfaction and engagement by 8%, while
-                                        driving incremental revenue in retail
-                                        and media. Designed and deployed
-                                        advanced machine learning pipelines,
-                                        integrating real-time recommendation
-                                        models into production. Built a modular,
-                                        reusable framework with Python and
-                                        PyTorch, enabling rapid iteration and
-                                        scalable deployment of ML models.
+                                        Engineered a real-time ML serving
+                                        infrastructure on Azure, leveraging
+                                        FastAPI, Kubernetes, and Redis for
+                                        low-latency inference at scale. Built a
+                                        containerized microservices architecture
+                                        with async processing and gRPC,
+                                        achieving a 10x reduction in response
+                                        times. Automated CI/CD pipelines using
+                                        Terraform and GitHub Actions, ensuring
+                                        high availability with real-time
+                                        monitoring.
                                     </p>
                                 </div>
                             </div>
@@ -683,22 +676,15 @@
                                 <p id="date-range">Feb 2021 - Oct 2021</p>
                                 <div>
                                     <p id="experience-description">
-                                        Played a key role in designing and
-                                        enhancing the Hailey AI Engine, the core
-                                        of 6Clicks’ GRC platform,
-                                        revolutionizing the automation of
-                                        compliance processes and reducing task
-                                        times from days to seconds. Leveraged
-                                        advanced machine learning and natural
-                                        language processing (NLP) to implement
-                                        features like Compliance Mapping and
-                                        Policy Gap Analysis, delivering instant
-                                        insights into control overlaps and
-                                        streamlining risk management. Ensured
-                                        seamless integration of the AI engine
-                                        into the multi-tenant platform,
-                                        providing real-time, AI-driven insights
-                                        that added significant value for users.
+                                        Designed the Hailey AI engine,
+                                        integrating transformer-based NLP models
+                                        to automate compliance analysis,
+                                        reducing manual effort from days to
+                                        seconds. Developed a real-time,
+                                        multi-tenant AI service with API-driven
+                                        insights, ensuring scalable inference
+                                        and high availability for regulatory
+                                        automation.
                                     </p>
                                 </div>
                             </div>
@@ -718,25 +704,13 @@
                                 <p id="date-range">Aug 2016 - Sept 2018</p>
                                 <div>
                                     <p id="experience-description">
-                                        Engineered and deployed end-to-end
-                                        automation solutions across industries
-                                        such as supply chain, banking, and HR,
-                                        utilizing RPA tools (UiPath, Automation
-                                        Anywhere) and custom Python scripting to
-                                        create scalable workflows. Integrated
-                                        with enterprise systems through REST
-                                        APIs, reducing manual workloads by over
-                                        25%, while ensuring robust error
-                                        handling in production environments.
-                                        Additionally, designed and implemented
-                                        enterprise-grade automation frameworks
-                                        for Robotics Centers of Excellence
-                                        (CoE), incorporating modular workflows,
-                                        CI/CD pipelines, and version control,
-                                        optimizing processes for 40% higher
-                                        throughput, enabling scalable automation
-                                        adoption, and ensuring compliance with
-                                        security standards.
+                                        Developed enterprise-grade microservices
+                                        in an event-driven architecture,
+                                        optimizing database performance through
+                                        indexing and query tuning. Implemented
+                                        structured logging, API versioning, and
+                                        CI/CD automation to enable seamless
+                                        deployments at scale.
                                     </p>
                                 </div>
                             </div>
