Improved more about me section

--- a/index.html
+++ b/index.html
@@ -274,33 +274,32 @@
 
                             <p>
                                 I'm a Senior ML Engineer at WooliesX, where I
-                                design and implement cutting-edge solutions that
-                                enable data-driven decision-making at scale.
-                                With a Master’s in Information Technology from
-                                UniMelb, I specialize in bridging the gap
-                                between engineering and data science, creating
-                                robust, efficient, and secure machine learning
-                                applications tailored to real-world business
-                                needs.
+                                build scalable, high-performance machine
+                                learning systems that power real-time
+                                decision-making and personalized experiences at
+                                scale. With a Master’s in Information Technology
+                                from UniMelb, I specialize in bridging the gap
+                                between ML research and production engineering,
+                                designing robust, efficient, and secure ML
+                                applications that drive tangible business
+                                impact.
                             </p>
 
                             <p>
-                                At the core of my work is the development of
-                                scalable, end-to-end MLOps platforms like
-                                Modelverse, designed to streamline model
-                                versioning, deployment, and collaboration across
-                                teams. I harness advanced technologies such as
-                                generative AI, agentic frameworks, semantic
-                                embeddings, and vector databases to create
-                                personalized recommendation systems, dynamic
-                                content delivery platforms, and real-time
-                                decision-making engines. By integrating
-                                cutting-edge machine learning techniques with
-                                robust engineering practices, I deliver
-                                innovative, user-focused solutions that are both
-                                technically sophisticated and operationally
-                                seamless, driving meaningful business impact
-                                across diverse domains.
+                                At the core of my work is end-to-end MLOps
+                                platform development, including Modelverse, an
+                                in-house ML platform that streamlines model
+                                versioning, deployment, and collaboration. My
+                                expertise spans graph-based recommendation
+                                systems, real-time ML inference platforms, and
+                                AI-driven automation, leveraging technologies
+                                like GNNs, agentic AI, vector databases, and
+                                scalable microservices. By integrating
+                                cutting-edge ML techniques with production-grade
+                                engineering, I deliver highly performant,
+                                resilient, and scalable AI solutions that
+                                enhance user engagement and operational
+                                efficiency.
                             </p>
 
                             <hr />
